Updated API spec, added auth
