# models/User.js
@@ -1,10 +1,14 @@
 class User {
   id;
   username;
+  password;
+  role;
 
-  constructor(id, username) {
+  constructor(id, username, password, role='default') {
     this.id = id;
     this.username = username;
+    this.password = password;
+    this.role = role;
   }
 }
 
